# flax-kmeans

./: .gitignore  CONTRIBUTING.md  README.md  next.md  notebook_comparison.md  pyproject.toml
configs/: plot_style.yaml
configs/datasets/: README.md  pen_digits.yaml  synthetic_blobs_v1.yaml  wholesale_customers.yaml
configs/experiments/: README.md  benchmark_matrix.yaml  experiment_config.schema.json  experiment_config.template.yaml  metrics_record.schema.json  run_manifest.schema.json
notebooks/: 01_sklearn_cpu.ipynb  02_jax_kmeans_tpu.ipynb  03_flashkmeans_gpu.ipynb  04_jax_flash_kmeans_tpu.ipynb  05_comparison_summary.ipynb  minimal_flax_flash_kmeans.ipynb
plans/: refined_plan.md
src/: __init__.py
src/algorithms/: __init__.py  flashkmeans_wrapper.py  jax_flash_kmeans.py  jax_kmeans.py  result.py  sklearn_kmeans.py
src/data/: __init__.py  generate_synthetic_npy.py
src/eval/: __init__.py  benchmark_stub.py  comparative_analysis.py  config_io.py  contracts.py  notebook_harness.py  run_benchmark.py  run_comparative_analysis.py  schema_validation.py
src/plots/: __init__.py  theme.py
tests/: conftest.py
tests/algorithms/: test_flash_kmeans_paths.py  test_kmeans_baselines.py  test_phase_b_kmeans.py  test_phase_c_flash_kmeans.py
tests/data/: test_generate_synthetic_npy.py
tests/eval/: test_benchmark_runner.py  test_benchmark_stub.py  test_comparative_analysis.py  test_config_io.py  test_run_benchmark_cli.py
