[project]
name = "flax-kmeans"
version = "0.1.0"
description = "JAX and flash-kmeans benchmarking project."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.6.0",
  "plotly>=6.0.0",
  "pyyaml>=6.0.0",
  "tqdm>=4.67.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.0",
  "mypy>=1.14.0",
  "pytest>=8.3.0",
  "ipykernel>=6.29.0"
]
jax = [
  "jax>=0.5.0",
  "jaxlib>=0.5.0"
]
flash = [
  "flash-kmeans>=0.2.0; sys_platform == 'linux'"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
exclude = ["notebooks/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
